--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+
+
+		<style>
+			.reveal .slides section .fragment.step-fade-in-then-out {
+				opacity: 0;
+				display: none; }
+			.reveal .slides section .fragment.step-fade-in-then-out.current-fragment {
+				opacity: 1;
+				display: inline; }
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
@@ -30,15 +40,19 @@
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+		<script src="plugin/animate/plugin.js"></script>
+		<script src="plugin/animate/svg.min.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-
+				animate: {
+					autoplay: true
+				},
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealAnimate ]
 			});
 		</script>
 	</body>
